[gd_scene load_steps=13 format=2]

[ext_resource path="res://screens/jintro.png" type="Texture" id=1]
[ext_resource path="res://Intro.gd" type="Script" id=2]
[ext_resource path="res://fonts/joust.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Overlay.tscn" type="PackedScene" id=4]
[ext_resource path="res://sprites/intro_v_bar.png" type="Texture" id=5]
[ext_resource path="res://sprites/intro_h_bar.png" type="Texture" id=6]
[ext_resource path="res://texture_h_scroller.tres" type="Material" id=7]
[ext_resource path="res://texture_h2_scroller.tres" type="Material" id=8]
[ext_resource path="res://texture_h3_scroller.tres" type="Shader" id=9]
[ext_resource path="res://screens/jscores.png" type="Texture" id=10]

[sub_resource type="DynamicFont" id=1]
size = 22
font_data = ExtResource( 3 )

[sub_resource type="ShaderMaterial" id=2]
shader = ExtResource( 9 )
shader_param/direction = Vector2( 1, 0 )
shader_param/speed = 0.05
shader_param/adjust = 17.0
shader_param/offset = Vector2( 0.375, 0 )

[node name="Intro" type="Node2D"]
script = ExtResource( 2 )

[node name="Screen1" type="Node2D" parent="."]

[node name="IntroScreen" type="Sprite" parent="Screen1"]
position = Vector2( 522, 291 )
scale = Vector2( 2.69868, 2.50294 )
texture = ExtResource( 1 )

[node name="StartText" type="Label" parent="Screen1"]
margin_left = 345.0
margin_top = 490.0
margin_right = 696.0
margin_bottom = 535.0
custom_fonts/font = SubResource( 1 )
text = "Press 1 or 2 to start
"
align = 1
valign = 1

[node name="Label2" type="Label" parent="Screen1"]
margin_left = 165.0
margin_top = 511.0
margin_right = 237.0
margin_bottom = 532.0
custom_colors/font_color = Color( 0.392157, 0.376471, 0.376471, 1 )
custom_fonts/font = SubResource( 1 )
text = "Test"

[node name="Version" type="Label" parent="Screen1"]
margin_left = 789.0
margin_top = 510.0
margin_right = 880.0
margin_bottom = 531.0
custom_colors/font_color = Color( 0.392157, 0.376471, 0.376471, 1 )
custom_fonts/font = SubResource( 1 )
text = "0.78"
align = 2

[node name="WebButtons" type="Node2D" parent="Screen1"]
visible = false
position = Vector2( 518, 500 )

[node name="Player1Button" type="Button" parent="Screen1/WebButtons"]
margin_left = -210.0
margin_top = -16.0
margin_right = -50.0
margin_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
hint_tooltip = "Start 1 player game"
mouse_default_cursor_shape = 2
custom_colors/font_color_focus = Color( 1, 1, 0.243137, 1 )
custom_colors/font_color_hover = Color( 1, 1, 0.243137, 1 )
custom_fonts/font = SubResource( 1 )
text = "1 Player"

[node name="Player2Button" type="Button" parent="Screen1/WebButtons"]
margin_left = 50.0
margin_top = -16.0
margin_right = 210.0
margin_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
hint_tooltip = "Start 2 player game"
mouse_default_cursor_shape = 2
custom_colors/font_color_focus = Color( 1, 1, 0.243137, 1 )
custom_colors/font_color_hover = Color( 1, 1, 0.243137, 1 )
custom_fonts/font = SubResource( 1 )
text = "2 Player"

[node name="Screen2" type="Node2D" parent="."]
visible = false

[node name="Sprite" type="Sprite" parent="Screen2"]
visible = false
position = Vector2( 535, 311.25 )
scale = Vector2( 2.88079, 2.48431 )
texture = ExtResource( 10 )

[node name="Heading" type="Label" parent="Screen2"]
margin_left = 346.0
margin_top = 73.0
margin_right = 697.0
margin_bottom = 139.0
rect_pivot_offset = Vector2( -1020, 212 )
custom_fonts/font = SubResource( 1 )
text = "JOUST CHAMPIONS

"
align = 1
valign = 1

[node name="Heading2" type="Label" parent="Screen2"]
margin_left = 186.0
margin_top = 113.0
margin_right = 537.0
margin_bottom = 179.0
rect_pivot_offset = Vector2( -1020, 212 )
custom_fonts/font = SubResource( 1 )
text = "All TIME

"
align = 1
valign = 1

[node name="Heading3" type="Label" parent="Screen2"]
margin_left = 493.0
margin_top = 113.0
margin_right = 844.0
margin_bottom = 179.0
rect_pivot_offset = Vector2( -1020, 212 )
custom_fonts/font = SubResource( 1 )
text = "Today

"
align = 1
valign = 1

[node name="Score1" type="Node2D" parent="Screen2"]
position = Vector2( 48, 156 )

[node name="Pos" type="Label" parent="Screen2/Score1"]
margin_left = 161.0
margin_top = -7.0
margin_right = 213.0
margin_bottom = 82.0
custom_fonts/font = SubResource( 1 )
text = "1)


"
align = 2

[node name="Name" type="Label" parent="Screen2/Score1"]
margin_left = 228.0
margin_top = -7.0
custom_fonts/font = SubResource( 1 )
text = "JMY

"

[node name="Score" type="Label" parent="Screen2/Score1"]
margin_left = 314.0
margin_top = -7.0
margin_right = 665.0
margin_bottom = 82.0
custom_fonts/font = SubResource( 1 )
text = "20150


"

[node name="TodayScore1" type="Node2D" parent="Screen2"]
position = Vector2( 368, 156 )

[node name="Pos" type="Label" parent="Screen2/TodayScore1"]
margin_left = 161.0
margin_top = -7.0
margin_right = 213.0
margin_bottom = 82.0
custom_fonts/font = SubResource( 1 )
text = "1)


"
align = 2

[node name="Name" type="Label" parent="Screen2/TodayScore1"]
margin_left = 228.0
margin_top = -7.0
custom_fonts/font = SubResource( 1 )
text = "JMY

"

[node name="Score" type="Label" parent="Screen2/TodayScore1"]
margin_left = 314.0
margin_top = -7.0
margin_right = 665.0
margin_bottom = 82.0
custom_fonts/font = SubResource( 1 )
text = "20150


"

[node name="ScrollingBars" type="Node2D" parent="."]
position = Vector2( -5, -1 )
scale = Vector2( 1.01, 0.99 )

[node name="TopBar" type="Sprite" parent="ScrollingBars"]
material = ExtResource( 7 )
position = Vector2( 521, 37 )
scale = Vector2( 3, 3 )
texture = ExtResource( 6 )

[node name="BottomBar" type="Sprite" parent="ScrollingBars"]
material = ExtResource( 7 )
position = Vector2( 521, 565 )
scale = Vector2( 3, 3 )
texture = ExtResource( 6 )

[node name="LeftBar" type="Sprite" parent="ScrollingBars"]
material = ExtResource( 8 )
position = Vector2( 137, 304 )
scale = Vector2( 3, 3 )
texture = ExtResource( 5 )

[node name="RightBar" type="Sprite" parent="ScrollingBars"]
material = SubResource( 2 )
position = Vector2( 905, 298 )
scale = Vector2( 3, 3 )
texture = ExtResource( 5 )

[node name="Overlay" parent="." instance=ExtResource( 4 )]
pause_mode = 2
position = Vector2( 870, 85 )
scale = Vector2( 0.2, 0.2 )

[node name="ScreenTimer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[connection signal="pressed" from="Screen1/WebButtons/Player1Button" to="." method="_on_Player1Button_pressed"]
[connection signal="pressed" from="Screen1/WebButtons/Player2Button" to="." method="_on_Player2Button_pressed"]
[connection signal="timeout" from="ScreenTimer" to="." method="_on_ScreenTimer_timeout"]
